# bgg-collection

./: .env.example  .gitignore  AGENTS.md  README.md  anaconda-project.yml  build_collection.py  build_descriptions.py  build_reference.py  collection_template.html  common.py  create_collection_html.py  overrides.toml  pyproject.toml
templates/: collection.html  reference.html
