[project]
name = "bgg-collection"
version = "0.1.0"
description = "Download BGG collection and generate printable HTML report"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "xmltodict>=0.14.2",
]
