[project]
name = "bgg-collection"
version = "0.1.0"
description = "Download BGG collection and generate printable HTML report"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "jinja2>=3.1.6",
    "pandas>=2.2.3",
    "pillow>=12.3.0",
    "pydantic-ai>=2.5.0",
    "qrcode>=8.2",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "xmltodict>=0.14.2",
]


[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "polars>=1.42.1",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.9.0",
]
